--- a/st.css
+++ b/st.css
@@ -1,13 +1,20 @@
 #fm{
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: space-between;
-    height: 400px;
-    margin: 30px ;
-    width: 40%;
+    height: max-content;
+    margin:30px; margin-bottom: 0; margin-top: 0;
+    
     background-color:rgb(20, 212, 237);
     border-radius: 10px;
+    border: 1px solid black;
+    padding: 5px;
+    
 }
+.ib{
+    width: 32%;
+}
+
 .sbtn{
     display: flex;
     justify-content: center;
@@ -15,5 +22,63 @@
 .sub{
     border: 1px solid black;
     background-color: lightgrey;
-    border-radius: 5px;
+    border-radius: 5px; padding-left:5px; padding-right:5px ;
+    margin: 5px;
 }
+.sub:hover{
+    cursor: pointer;
+}
+.inp{
+    border-radius: 5px; width: 100%;
+    border: 1px solid rgb(28, 26, 26);
+}
+
+table{
+    margin: 10px;
+}
+tr{
+    background-color: antiquewhite;
+}
+
+
+@media (max-width:350px){
+    .hd{
+        font-size: small;
+    }
+   #fm{
+    margin: 5px;
+    margin-bottom: 0;
+
+   }
+   #fm .ib{
+    width: 100%;
+   }
+   #fm .ib .inp{
+    width: 100%;
+   }
+   thead{
+    display: none;
+   }
+   tr{
+    display: flex; flex-direction: column;
+    margin: 10px;
+   }
+    
+}
+
+@media (min-width:350px) and (max-width:750px){
+    #fm{
+        margin: 20px;margin-bottom: 0;
+    }
+    #fm .ib{
+        width: 50%;
+       }
+       #fm .ib .inp{
+        width: 95%;
+       }
+     table{
+        width: 100%
+     };  
+}
+
+
