--- a/st.css
+++ b/st.css
@@ -1,84 +1,125 @@
-#fm{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    height: max-content;
-    margin:30px; margin-bottom: 0; margin-top: 0;
-    
-    background-color:rgb(20, 212, 237);
-    border-radius: 10px;
-    border: 1px solid black;
-    padding: 5px;
-    
+body{
+    background-color: rgba(202,210,197,255);margin: 0;
 }
-.ib{
-    width: 32%;
-}
-
-.sbtn{
+header{
     display: flex;
+    height: 100px;
+}
+.icon{ display: flex; align-items: center; justify-content: center; flex: 1;
+    background-color:rgba(47,61,70,255);
+}
+.name{
+    display: flex;
+    background-color: rgba(47,61,70,255);
     justify-content: center;
-}
-.sub{
-    border: 1px solid black;
-    background-color: lightgrey;
-    border-radius: 5px; padding-left:5px; padding-right:5px ;
-    margin: 5px;
-}
-.sub:hover{
-    cursor: pointer;
-}
-.inp{
-    border-radius: 5px; width: 100%;
-    border: 1px solid rgb(28, 26, 26);
-}
-
-table{
-    margin: 10px;
-}
-tr{
-    background-color: antiquewhite;
+    align-items: center;
+    flex:11;
+    font-size: 25px;font-family: arial; color: white;letter-spacing:4px ;
 }
 
 
-@media (max-width:350px){
-    .hd{
-        font-size: small;
+.main{
+    display: flex;border: 1px solid black; 
+}
+.side{
+     margin: 70px; height: 600px; border-radius: 25px; 
+    background-color: rgba(53,53,53,255);
+}
+input{
+    height: 60px; margin: 70px; width: 70%;
+     border-radius: 10px; background-color:rgba(53,53,53,255) ; border: 1px solid white;
+}   
+::-webkit-input-placeholder{
+    color: white; width: 100%; font-size: 25px;
+}
+.b{
+    width:200px; height: 150px;  border-radius: 25px;
+    background-color:rgba(53,53,53,255); margin: 10px;
+}
+.footer{
+    height: 150px; width: 100%; background-color:rgba(53,53,53,255); border-radius: 25px;
+}
+
+
+   
+
+.sec1{
+      flex: 4;
+}
+.sec2{ display: flex; flex-direction: column; justify-content: space-between;
+      flex:7;
+}
+
+.top{
+    display: flex;  justify-content: center;
+}
+.middle{ 
+    display: flex; justify-content: space-around;
+}
+.bottom{
+    margin: 70px;
+}
+
+
+
+@media(min-width:900px) and (max-width:1000px){
+    input{
+        width: 90%; margin-left:0px;margin-right:0px;
     }
-   #fm{
-    margin: 5px;
-    margin-bottom: 0;
+    .b{
+        width:30%;
+    }
+    .side{
+        margin-right: 30px;
+    }
+}
 
-   }
-   #fm .ib{
-    width: 100%;
-   }
-   #fm .ib .inp{
-    width: 100%;
-   }
-   thead{
-    display: none;
-   }
-   tr{
-    display: flex; flex-direction: column;
-    margin: 10px;
-   }
+@media(min-width:700px) and (max-width:900px){
+    input{
+        width: 90%;  margin-left:0px;margin-right:0px;
+    }
     
-}
-
-@media (min-width:350px) and (max-width:750px){
-    #fm{
-        margin: 20px;margin-bottom: 0;
+        
+    
+    .side{
+        margin-top: 40px; margin-left: 20px; margin-bottom: 0px; margin-right: 20px;
+         width: 300px;   height: 805px;
     }
-    #fm .ib{
-        width: 50%;
-       }
-       #fm .ib .inp{
-        width: 95%;
-       }
-     table{
-        width: 100%
-     };  
+    .middle{
+        display: flex; flex-direction: column;
+        align-items: center; justify-content: center; 
+    }
+    .b{
+        width: 100%; 
+    }
+    .bottom{
+        margin: 0;
+    }
 }
 
+@media all and (max-width:700px){
+    .main{
+        display: flex; flex-direction: column;
+    }
+    input,.b,.footer{
+        width: 100%; margin:5px;
+    }
+    .b{
+        height: 200px;
+    }
+    .footer{
+        height: 300px;
+    }
+    .middle{
+        display: flex; flex-direction: column;
+        align-items: center; justify-content: center;
+    }
+    .side{
+        margin:10px; height: 400px;
+    }
+    .bottom{
+       margin:0;
+    }
+    
 
+}
