--- a/st.css
+++ b/st.css
@@ -1,125 +1,83 @@
-body{
-    background-color: rgba(202,210,197,255);margin: 0;
-}
-header{
-    display: flex;
-    height: 100px;
-}
-.icon{ display: flex; align-items: center; justify-content: center; flex: 1;
-    background-color:rgba(47,61,70,255);
+
+form{
+    padding-top: 20px; background-color: rgb(210, 215, 217);
 }
 .name{
+    margin-left:20px ;
+}
+.boxes{
+    display: flex; margin: 20px ; margin-top: 0;
+}
+.box2{
+    margin-left: 30px;  
+}
+.email{
+    margin-left: 20px;
+}
+.emailbox{
+    margin: 20px; margin-top: 0; width: 410px;
+}
+.exp{
+    margin-left: 20px;
+}
+
+
+.rating{
     display: flex;
-    background-color: rgba(47,61,70,255);
-    justify-content: center;
-    align-items: center;
-    flex:11;
-    font-size: 25px;font-family: arial; color: white;letter-spacing:4px ;
+    transform:rotateY(180deg) translate(1006px); 
+}
+.rating input{
+    display: none;
+}
+.rating label{
+    display:block ;
+    width: 50px;
+}
+.rating label:before{
+    content:'\f005'; position: relative;
+    font-family: "FontAwesome"; 
+    font-size: 40px; color:white;
+}
+.rating label:after{
+    content:'\f005'; 
+    font-family: "FontAwesome";
+    font-size: 40px; color: yellow;
+    position: relative; opacity: 0; left: -45px;
+}
+.rating label:hover:after, 
+.rating label:hover ~ label:after,
+.rating input:checked ~ label:after{
+    opacity: 1;
 }
 
-
-.main{
-    display: flex;border: 1px solid black; 
-}
-.side{
-     margin: 70px; height: 600px; border-radius: 25px; 
-    background-color: rgba(53,53,53,255);
-}
-input{
-    height: 60px; margin: 70px; width: 70%;
-     border-radius: 10px; background-color:rgba(53,53,53,255) ; border: 1px solid white;
-}   
-::-webkit-input-placeholder{
-    color: white; width: 100%; font-size: 25px;
-}
-.b{
-    width:200px; height: 150px;  border-radius: 25px;
-    background-color:rgba(53,53,53,255); margin: 10px;
-}
-.footer{
-    height: 150px; width: 100%; background-color:rgba(53,53,53,255); border-radius: 25px;
+.text{
+    margin-left: 20px; font-size: large; font-family: serif;
 }
 
-
-   
-
-.sec1{
-      flex: 4;
-}
-.sec2{ display: flex; flex-direction: column; justify-content: space-between;
-      flex:7;
+.message{
+    width: 500px; height: 100px; margin-left: 20px;
 }
 
-.top{
-    display: flex;  justify-content: center;
+.tablemessage{
+    margin-left: 20px;
 }
-.middle{ 
-    display: flex; justify-content: space-around;
-}
-.bottom{
-    margin: 70px;
+.table{
+    margin: 20px; margin-top: 0;
 }
 
-
-
-@media(min-width:900px) and (max-width:1000px){
-    input{
-        width: 90%; margin-left:0px;margin-right:0px;
-    }
-    .b{
-        width:30%;
-    }
-    .side{
-        margin-right: 30px;
-    }
+input[type=radio]{
+    height: 20px;
+    width: 20px; 
 }
 
-@media(min-width:700px) and (max-width:900px){
-    input{
-        width: 90%;  margin-left:0px;margin-right:0px;
-    }
-    
-        
-    
-    .side{
-        margin-top: 40px; margin-left: 20px; margin-bottom: 0px; margin-right: 20px;
-         width: 300px;   height: 805px;
-    }
-    .middle{
-        display: flex; flex-direction: column;
-        align-items: center; justify-content: center; 
-    }
-    .b{
-        width: 100%; 
-    }
-    .bottom{
-        margin: 0;
-    }
+.area{
+    margin-left: 20px; width: 100%; height:100px;
 }
 
-@media all and (max-width:700px){
-    .main{
-        display: flex; flex-direction: column;
-    }
-    input,.b,.footer{
-        width: 100%; margin:5px;
-    }
-    .b{
-        height: 200px;
-    }
-    .footer{
-        height: 300px;
-    }
-    .middle{
-        display: flex; flex-direction: column;
-        align-items: center; justify-content: center;
-    }
-    .side{
-        margin:10px; height: 400px;
-    }
-    .bottom{
-       margin:0;
-    }
-    
-
+.button{
+    margin:10px; margin-left: 20px;
 }
+.but button{
+    padding: 10px;
+}
+
