--- a/st.css
+++ b/st.css
@@ -24,7 +24,8 @@ form{
 
 .rating{
     display: flex;
-    transform:rotateY(180deg) translate(1150px); 
+    /*transform:rotateY(180deg) translate(1006px); */
+    transform: rotateY(180deg) ; transform-origin: 130px;
 }
 .rating input{
     display: none;
