--- a/st.css
+++ b/st.css
@@ -1,18 +1,46 @@
-.top{
+.card-body{
+    text-align: center;
+}
+.bt{
     display: flex;
     justify-content: center;
-    margin: 20px;
+    margin: 50px; 
 }
-input{
-    width: 300px;
-    background-color: rgb(0,0,0,0.1);
+.card-header{
+    text-align: center ;
 }
-.btn{
-    margin-left: 10px;
+
+img{
+    padding: 20px; padding-bottom: 0;
+    width: 100px; height: 300px;
 }
-table{
-    background-image:radial-gradient(rgb(142, 75, 90),rgb(86, 72, 141),rgb(80, 150, 75)) ;
-}
-.tbody{
+.card{
+    background-image: linear-gradient(to right,rgba(217,200,162,255),rgba(34,63,74,255));
     color: white;
+}
+.card-body{
+    font-size: 25px;
+}
+.btn-primary{
+    color: white!important;
+    border: 1px solid white!important;
+    background-color: rgb(0,0,0,0)!important;
+}
+.info1,.info2,.info3{
+    text-align: center;
+    display: none;
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1fIEdG0Bn4S8V3BWYWRcwPZkExpFbsGN-9w&usqp=CAU");
+}
+
+.temp{
+    font-size:50px;
+}
+.feelslike{
+    font-size:30px;
+}
+.description{
+    font-size: 30px;
+}
+.windspeed{
+    font-size: 30px;
 }
