--- a/st.css
+++ b/st.css
@@ -1,19 +1,4 @@
-body{
-    background-image: linear-gradient(to top right,rgb(139, 119, 119),rgb(167, 227, 167));}
-.container{
-    background-image: linear-gradient(rgb(142, 70, 70),rgb(71, 71, 148));
-}
-.name{
-    margin: 10px;
-    border-radius: 5px;
-    font-family:cursive;
-}
-.comment{
-    margin: 10px; color: white;
-    font-size: 20px; border-radius: 20px; background-image: linear-gradient(rgb(142, 70, 70),rgb(71, 71, 148));
-}
-
-
-textarea::placeholder{
-font-size: 30px; color: white;
+.image{
+    height: 300px;
+    width: 300px;
 }
